Revision history for Proc-Launcher

For complete revision history, see: http://github.com/wu/Proc-Launcher

0.0.31 Fri Apr 15, 2011  9:09pm

  - adding some additional debugging for failures on MirBSD and OpenBSD

  - updating dzil.ini, no longer works with current version of Dist-Zilla

0.0.30 Thu Jun 24, 2010  7:46 pm

    - fixing one more broken test missed in previous release
      - use a temporary directory for pid/log files

0.0.29 Wed Jun 23, 2010  2:50 pm

    - fix some broken test cases
      - always use a temporary directory for test case pid/log files

0.0.28 Tue Jun 22, 2010 11:10 pm

    - fix for bug where is_running() called immediately after start() returned false
      - write child pidfile in parent process on fork()
        - child process might not be forked instantly if system is busy
      - prevents needing to cache the pid
        - gets ugly since multiple processes might be attempting to control the same daemon
      - warning: two processes calling start() at exactly the same time could still start two daemons
        - still working on a fix


0.0.27 Tue Jun 22, 2010 10:45 pm

    - remove required class 'Proc::Launcher::Supervisor' on Proc::Launcher::Manager's supervisor object

    - tweak sleep times on a few test cases
      - warning: child process may return false if is_running() called immediately following start()
        - child process may not have written pid file yet
        - considering another fix for this involving caching the pid from fork()

0.0.26 Sat Dec  5, 2009  5:02 am

    - adjusting sleep times in test cases
      - consistently sleep a few seconds after start() and stop() before is_running()
      - pid is no longer being cached, need to wait for child process has forked and written pidfile
      - generally happens very quickly but might take a few seconds on slower machines

0.0.25 Sat Dec  5, 2009  3:59 am

    - API CHANGES:
      - read_pid() is now pid()