@@ -8,6 +8,9 @@ For complete revision history, see: http://github.com/wu/Proc-Launcher
 
   - updating dzil.ini, no longer works with current version of Dist-Zilla
 
+  - resolve locking bug that can result in multiple instances of a daemon being started
+    - launcher's start() method may now return undef if child exits immediately or takes a long time to fork()
+
 0.0.30 Thu Jun 24, 2010  7:46 pm
 
     - fixing one more broken test missed in previous release
